[gd_scene load_steps=4 format=3 uid="uid://dbkxxes56oj60"]

[ext_resource type="PackedScene" uid="uid://c4isp66o7sso5" path="res://scenes/trait_ui/trait_ui.tscn" id="1_j557w"]
[ext_resource type="Script" uid="uid://d2ru03og0u42n" path="res://scenes/traits/traits.gd" id="1_m71nx"]
[ext_resource type="Script" uid="uid://br017kbxir65y" path="res://components/scene_spawner.gd" id="3_sts0g"]

[node name="Traits" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_m71nx")

[node name="TraitContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 76.0
offset_bottom = 204.0

[node name="TraitUI" parent="TraitContainer" instance=ExtResource("1_j557w")]
layout_mode = 2

[node name="TraitUI2" parent="TraitContainer" instance=ExtResource("1_j557w")]
layout_mode = 2

[node name="TraitUI3" parent="TraitContainer" instance=ExtResource("1_j557w")]
layout_mode = 2

[node name="TraitUI4" parent="TraitContainer" instance=ExtResource("1_j557w")]
layout_mode = 2

[node name="SceneSpawner" type="Node" parent="."]
script = ExtResource("3_sts0g")
scene = ExtResource("1_j557w")
metadata/_custom_type_script = "uid://br017kbxir65y"
